# config

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
examples/: term-compact.toml  term-full.toml  term_compact.rs  term_full.rs
src/: _file.rs  _term.rs  lib.rs
tests/: file-json.toml  file.rs
