[package]
name = "slog-config"
version = "0.3.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]

description = "Builds slog `Drain` from text config (eg. file)"
keywords = ["slog", "log", "logging", "config", "file"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-config"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/config"
readme = "README.md"

[dependencies]
isatty = "0.1.3"
toml = { version = "0.3", features = ["serde"], default-features = false }
serde = "0.9"
serde_derive = "0.9"

slog = "~2.0.0-2"
slog-json = "~2.0.0-2"
slog-term = "~2.0.0-2"
