[package]
name = "slog-config"
version = "0.4.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]

description = "Builds slog `Drain` from text config (eg. file)"
keywords = ["slog", "log", "logging", "config", "file"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-config"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/config"
readme = "README.md"

[dependencies]
isatty = "0.1.3"
toml = { version = "0.4", features = ["serde"], default-features = false }
serde = "1"
serde_derive = "1"

slog = "2"
slog-json = "2"
slog-term = "2"
